fixed cart page view on mid/large screens, added sticky button on mobile

--- a/src/app/main/cart/style.scss
+++ b/src/app/main/cart/style.scss
@@ -1,4 +1,7 @@
 .cart {
+    @media only screen and (max-width: 782px) {
+        margin-bottom: 11vh;
+    }
     .empty-cart {
         text-align: center;
     }
@@ -11,6 +14,21 @@
             .price {
                 float: right;
             }
+            @media only screen and (max-width: 782px) {
+                padding: 0px;
+            }
+        }
+        .checkout-summary-mobile {
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            height: 10vh;
+            padding: 10px 0 10px ;
+            margin: 0;
+            background-color: #00CC51;
         }
         .vendor-list {
             float: right;
